# litestar-fullstack

./: .bumpversion.cfg  .dockerignore  .env.docker.example  .env.example  .env.local.example  .env.testing  .eslintrc  .eslintrc.cjs  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .pylintrc  .sonarcloud.properties  AGENTS.md  CLAUDE.md  CNAME  CONTRIBUTING.rst  Dockerfile  Makefile  PROJECT_GUIDELINES.md  README.md  a.py  biome.json  blot.md  components.json  docker-compose.infra.yml  docker-compose.override.yml  docker-compose.yml  manage.py  mcve.py  mkdocs.yml  mypy.ini  nixpacks.toml  openapi-ts.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  (+15 more)
.claude/: mcp-strategy.md  settings.json
.claude/agents/: docs-vision.md  expert.md  prd.md  testing.md
.claude/commands/: explore.md  fix-issue.md  implement.md  prd.md  review.md  test.md
.claude/skills/advanced-alchemy/: skill.md
.claude/skills/litestar/: skill.md
.claude/skills/litestar-vite/: skill.md
.claude/skills/react-tanstack/: skill.md
.claude/skills/tailwind/: skill.md
.cursor/rules/backend/: advanced_alchemy_integration.mdc  alembic_migrations.mdc  async_programming.mdc  litestar_specific.mdc  services_layer.mdc  sqlalchemy_models.mdc
.cursor/rules/core/: comments_and_docs.mdc  makefile_style.mdc  naming_conventions.mdc  project_structure.mdc  python_style.mdc
.cursor/rules/deployment/: cicd_pipelines.mdc  dockerfiles.mdc
.cursor/rules/domain/: auth_and_users.mdc  authentication_flow.mdc  data_validation.mdc
.cursor/rules/frontend/: .gitkeep  shadcn_ui_components.mdc  tailwind_css_v4.mdc  typescript_style.mdc  vite_config.mdc
.cursor/rules/quality/: performance.mdc  security_best_practices.mdc  static_analysis.mdc  testing_pytest.mdc
.github/: CODEOWNERS
.github/workflows/: ci.yaml  docs-preview.yaml  docs.yaml  makefile.yml  pullrequest.yaml
app/: __main__.py  main.py
app/config/: app.py  base.py
app/db/migrations/: alembic.ini
app/db/models/: __init__.py  role.py  tag.py  team_member.py  team_roles.py  user.py
app/domain/accounts/: deps.py  guards.py  services.py  signals.py  urls.py
app/domain/system/: __init__.py  schemas.py  tasks.py
app/domain/teams/: __init__.py  schemas.py
app/domain/web/: __init__.py
app/lib/: deps.py  exceptions.py
app/server/: core.py
contrib/: docker-compose.yml
deploy/: docker-compose.infra.yml
deploy/docker/dev/: Dockerfile  Dockerfile.dev
deploy/docker/run/: Dockerfile  Dockerfile.distroless
deploy/web/: Dockerfile.linux  Dockerfile.win
docs/: changelog.rst  conf.py  contribution-guide.rst  index.md  index.rst
docs/api/: asgi.rst  cli.rst  config.rst  db.rst  index.rst  server.rst  utils.rst
docs/api/domain/: index.rst  security.rst  urls.rst
docs/api/lib/: cache.rst  compression.rst  constants.rst  cors.rst  crypt.rst  csrf.rst  dependencies.rst  deps.rst  dto.rst  exceptions.rst  index.rst  openapi.rst  (+5 more)
docs/app_reference/: app.md
docs/architecture/: 01-overview.md  02-project-structure.md  03-backend-architecture.md  04-authentication-security.md  05-frontend-architecture.md  06-development-workflow.md  07-best-practices.md  index.md
docs/code_reference/: cli.md  config.md  module1.md  module2.md
docs/developer_guide/: commands.md  developer_setup.md  releases.md  workflows.md
docs/examples/: app.service
docs/extras/: credits.md  file_tree.md
docs/todo/: 2fa-implementation-plan.md
docs/usage/: deployment.rst  index.rst  installation.rst  startup.rst  task-queue.rst  user-management.rst
docs/user_guide/: installation.md  usage.md
latest/: .buildinfo  changelog.html  contribution-guide.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/_modules/: index.html
latest/_sources/: contribution-guide.rst.txt  index.rst.txt
latest/api/: asgi.html  cli.html  config.html  db.html  index.html  server.html  utils.html
latest/usage/: development.html  index.html  installation.html  startup.html
migrations/: env.py
public/.vite/: manifest.json
public/assets/: main-A5x3Hzs_.css  main-njx0B0bO.js
resources/: App.tsx  main.css  main.tsx  openapi.json
resources/components/: container.tsx  header.tsx  icons.tsx  input-error.tsx  logo.tsx  main-nav.tsx  mode-toggle.tsx  team-switcher.tsx  theme-provider.tsx  theme-toggle.tsx
resources/contexts/: AuthProvider.tsx
resources/layouts/: AuthLayout.tsx  MainLayout.tsx  app-layout.tsx  guest-layout.tsx
resources/lib/: inertia.ts  protected-routes.tsx  utils.ts
resources/pages/: Home.tsx  Login.tsx  PageNotFound.tsx  Placeholder.tsx  Register.tsx  about.tsx  dashboard.tsx  error.tsx  home.tsx  landing.tsx
resources/services/: auth.ts  authService.ts
resources/types/: api.ts  global.d.ts  index.d.ts
scripts/: build-docs.py  entrypoint.sh  post-builds.py  pre-build.py
specs/guides/: quality-gates.yaml
src/app/: __about__.py  __init__.py  __main__.py  asgi.py  cli.py  utils.py
src/js/: .cta.json  .eslintrc.json  README.md  biome.json  components.json  hey-api.config.ts  index.html  openapi-api.config.ts  openapi-ts.config.ts  openapi.config.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/pyspa/: __init__.py  __main__.py  asgi.py
tests/: conftest.py  data_fixtures.py  docker-compose.yml  docker_service.py  docker_service_fixtures.py  helpers.py  utils.py
tests/integration/: conftest.py  docker-compose.yml  test_access.py  test_account_role.py  test_accounts.py  test_health.py  test_teams.py  test_tests.py
tests/integrations/: test_main.py
tests/unit/: conftest.py  test_cli.py
todos/: 01-email-verification-system.md  02-password-reset-flow.md  03-oauth-google-integration.md  04-email-service-integration.md  05-production-validation-fields.md  06-backend-testing-overhaul.md  07-2fa-totp-implementation.md  08-authentication-settings.md
tools/: build_docs.py  format-source.sh  manage-assets.py  manage_assets.py  post_builds.py  requirements-osx-arm64.sh
(+1414 files in other folders)
